# shard-v2

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: CEREBRAS.md  GROQ.md  TODO.md
scripts/: build-macos.sh
src/: main.ts  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/benches/: retrieval_bench.rs  vision_bench.rs
src-tauri/icons/: icon.icns
src-tauri/icons/shard.icon/: icon.json
src-tauri/src/: background.rs  cache.rs  config.rs  gemini_files.rs  interactions.rs  lib.rs  memories.rs  prompts.rs  retrieval.rs  tools.rs
src-tauri/src/agent/: gemini.rs  mod.rs  openrouter.rs  types.rs
src-tauri/src/integrations/: arxiv.rs  finance.rs  mod.rs  ocr.rs  vision_llm.rs  weather.rs  web_search.rs  wikipedia.rs
src-tauri/src/tests/: agent_tests.rs  background_tests.rs  cache_tests.rs  config_tests.rs  gemini_tests.rs  interactions_tests.rs  memories_tests.rs  mod.rs  prompts_tests.rs  research_tests.rs  tools_tests.rs
src/tests/: ipc.test.ts
src/ui/: icons.ts  index.ts  markdown.ts  messages.ts
