[package]
name = "shard"
version = "0.1.0"
description = "An AI Research Companion"
authors = ["oupadhyay"]
edition = "2021"

[lib]
name = "shard_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
log = "0.4"
objc = "0.2"
quick-xml = { version = "0.37.5", features = ["serialize"] }
time = { version = "0.3.36", features = ["macros", "serde", "formatting", "parsing"] }
tauri-plugin-global-shortcut = "2"
reqwest = { version = "0.12", features = ["json", "stream"] }
tokio = { version = "1", features = ["full"] }
tauri-plugin-log = "2"
arboard = "3"
leptess = "0.14"
yahoo_finance_api = "2"
wikipedia = "0.3"
scraper = "0.19"
image = "0.24"
screenshots = "0.6"
window-vibrancy = "0.6"
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
futures-util = "0.3"
base64 = "0.22"
uuid = { version = "1.0", features = ["v4"] }
urlencoding = "2.1"
chrono = { version = "0.4", features = ["serde"] }
regex = "1.12.2"

[dev-dependencies]
tempfile = "3"
criterion = "0.5"

[[bench]]
name = "retrieval_bench"
harness = false
